--- a/nginx-example/nginx.conf
+++ b/nginx-example/nginx.conf
@@ -43,7 +43,7 @@ server {
 # Reject direct IPv6 access
 
 server {
-  listen 443 ssl;
+  listen [::]:443 ssl;
   http2 on;
   server_name (Add IPv6 Address);
   include /etc/nginx/conf.d/nginx_tls.conf;
