--- a/env/tableview.env
+++ b/env/tableview.env
@@ -6,18 +6,22 @@
 #####################
 
 # Database Username
+# May require single quotation marks around a complex database username used - example: 'tableview$1'
 dbUsername = 
 
 # Database Password
+# May require single quotation marks around a complex database password used - example: 'HopefullyASecurePasswordIsUsed$1'
 dbPassword = 
 
 # Database Address
+# TLS not supported yet!
 dbAddress = 
 
 # Database Port
 dbPort = 3306
 
 # Database Transport Protocol (udp/tcp)
+# TLS not supported yet!
 dbTransport = tcp
 
 
@@ -26,4 +30,4 @@ dbTransport = tcp
 #######################
 
 # Table View Port Number
-tvPort = 8001
+tvPort = 8004
