--- a/env/tableview.env
+++ b/env/tableview.env
@@ -1,33 +1,35 @@
 # Table View Configuration File
 
-
 #####################
 # Database Settings #
 #####################
 
 # Database Username
-# May require single quotation marks around a complex database username used - example: 'tableview$1'
-dbUsername = 
+# May require single quotation marks around a complex database username - example: 'tableview$1'
+dbUsername =
 
 # Database Password
-# May require single quotation marks around a complex database password used - example: 'HopefullyASecurePasswordIsUsed$1'
-dbPassword = 
-
-# Database Address
-# TLS not supported yet!
-dbAddress = 
-
-# Database Port
-dbPort = 3306
+# May require single quotation marks around a complex database password - example: 'HopefullyASecurePasswordIsUsed$1'
+dbPassword =
 
 # Database Transport Protocol (udp/tcp)
-# TLS not supported yet!
 dbTransport = tcp
 
+# Database IP Address/Domain Name
+dbAddress =
+
+# Database Port Number
+dbPort = 3306
+
+# TLS Option (false/true)
+# When using TLS with a self-signed certificate the CA certificate must be installed on the OS
+# For instructions on installing a CA certificate see:
+# https://github.com/Ellwould/table-view/blob/main/README.md
+dbTls =
 
 #######################
 # Table View Settings #
 #######################
 
-# Table View Port Number
-tvPort = 8004
+# Table View Port Number to listen on (Number between 1024-49151)
+tvPort = 8003
