--- a/nginx-example/conf.d/nginx_tls.conf
+++ b/nginx-example/conf.d/nginx_tls.conf
@@ -1,4 +1,4 @@
-ssl_certificate /etc/letsencrypt/live/(Add FQDN)/cert.pem;
+ssl_certificate /etc/letsencrypt/live/(Add FQDN)/fullchain.pem;
 ssl_certificate_key /etc/letsencrypt/live/(Add FQDN)/privkey.pem;
 ssl_session_timeout 1d;
 ssl_session_cache shared:MozSSL:10m; # about 40000 sessions
@@ -11,5 +11,5 @@ ssl_conf_command Ciphersuites TLS_AES_256_GCM_SHA384;
 ssl_stapling on;
 ssl_stapling_verify on;
 
-# Verify chain of trust of OCSP response using CA root certificate
-ssl_trusted_certificate /etc/letsencrypt/live/(Add FQDN)/fullchain.pem;
+# Verify chain of trust of OCSP response
+ssl_trusted_certificate /etc/letsencrypt/live/(Add FQDN)/chain.pem;
