--- a/env/tableview.env
+++ b/env/tableview.env
@@ -13,23 +13,26 @@ dbUsername =
 dbPassword =
 
 # Database Transport Protocol (udp/tcp)
-dbTransport = tcp
+dbTransport = 'tcp'
 
 # Database IP Address/Domain Name
-dbAddress =
+dbAddress = 'localhost'
 
 # Database Port Number
-dbPort = 3306
+dbPort = '3306'
 
 # TLS Option (false/true)
 # When using TLS with a self-signed certificate the CA certificate must be installed on the OS
 # For instructions on installing a CA certificate see:
 # https://github.com/Ellwould/table-view/blob/main/README.md
-dbTls =
+dbTls = 'true'
 
 #######################
 # Table View Settings #
 #######################
 
+# Table View IP Address/Domain Name
+tvAddress = 'localhost'
+
 # Table View Port Number to listen on (Number between 1024-49151)
-tvPort = 8003
+tvPort = '8003'
